# gpdb

./: .cproject  .project  configure  configure.in
contrib/pgcrypto/package/: Makefile
gpAux/: Makefile
gpAux/extensions/pgbouncer/package/: Makefile
gpAux/extensions/pljava/package/: Makefile
gpAux/extensions/plr/package/: Makefile
gpAux/extensions/postgis-2.0.3/package/: Makefile
gpAux/releng/: gppkg.mk  releng.mk
gpAux/releng/lib/: platform_defines.sh
src/: Makefile.global.in
src/backend/: Makefile  mock.mk
src/backend/access/common/: heaptuple.c  printtup.c
src/backend/cdb/: cdbexplain.c  cdbgang.c  cdbmutate.c  partitionselection.c
src/backend/cdb/dispatcher/: cdbgang.c
src/backend/cdb/motion/: ic_udpifc.c
src/backend/codegen/: CMakeLists.txt  Makefile  code_generator.cpp  codegen.cc  codegen.cpp  codegen_func_info.cpp  codegen_interface.cc  codegen_manager.cc  codegen_manager.cpp  codegen_wrapper.cc  codegen_wrapper.cpp  init_codegen.cpp  slot_deform_tuple_codegen.cc  slot_deform_tuple_codegen.cpp  slot_projection_codegen.cpp
src/backend/codegen/include/codegen/: base_codegen.h  codegen.h  codegen_interface.h  codegen_manager.h  slot_deform_tuple_codegen.h
src/backend/codegen/include/codegen/utils/: clang_compiler.h  code_generator.h  function_wrappers.h  instance_method_wrappers.h  utility.h
src/backend/codegen/tests/: clang_compiler_unittest.cc  code_generator_unittest.cc  codegen_framework_unittest.cc  codegen_manager_unittest.cc
src/backend/codegen/utils/: clang_compiler.cc  code_generator.cc
src/backend/codegen/utils/examples/: materialize_tuple_ex.cc
src/backend/commands/: explain.c
src/backend/executor/: Makefile  execAbstractReader.c  execGpmon.c  execHHashagg.c  execMain.c  execProcnode.c  execResilientJoin.c  execTuples.c  execUtils.c  nodeAgg.c  nodeHash.c  nodeHashjoin.c  nodePartitionSelector.c  nodeResilientJoin.c  nodeSequence.c
src/backend/executor/test/: Makefile
src/backend/gpopt/: gpopt.mk
src/backend/gpopt/translate/: CTranslatorDXLToPlStmt.cpp
src/backend/lib/: Makefile  stringinfo.c
src/backend/nodes/: copyfuncs.c  outfast.c  outfuncs.c  readfast.c
src/backend/optimizer/plan/: planner.c
src/backend/port/: sysv_shmem.c
src/backend/storage/file/: bfz.c
src/backend/storage/ipc/: Makefile  dsm.c  dsm_impl.c  ipci.c  shm_toc.c
src/backend/storage/ipc/test/: Makefile  dsm_test.c
src/backend/tcop/: postgres.c  pquery.c
src/backend/utils/adt/: gp_partition_functions.c
src/backend/utils/init/: postinit.c
src/backend/utils/misc/: guc.c  guc_gp.c  postgresql.conf.sample
src/backend/utils/mmgr/: Makefile  aset.c  mcxt.c  memaccounting.c  memprot.c
src/backend/utils/mmgr/test/: aset_test.c  memaccounting_test.c
src/backend/utils/resowner/: resowner.c
src/include/: miscadmin.h  pg_config.h.in
src/include/cdb/: cdbpartition.h  cdbvars.h
src/include/codegen/: code_generator.h  codegen.h  codegen_func_info.h  codegen_manager.h  codegen_manager_c.h  codegen_wrapper.h  init_codegen.h  slot_deform_tuple_codegen.h
src/include/executor/: nodeSequence.h  tuptable.h
src/include/lib/: ilist.h  stringinfo.h
src/include/nodes/: execnodes.h  memnodes.h  plannodes.h  relation.h
src/include/storage/: buffile_gpdb.h  lwlock.h
src/include/utils/: guc.h  memaccounting.h  memaccounting_private.h  memutils.h  palloc.h  resowner.h
src/pl/plperl/package/: Makefile
src/test/regress/: greenplum_schedule
src/test/regress/expected/: qp_dpe.out  qp_dpe_optimizer.out
src/test/regress/output/: aocs.source
src/test/regress/sql/: qp_dpe.sql  qp_olap_window.sql
src/test/tinc/tincrepo/resource_management/eagerfree/: test_eagerfree.py
src/test/tinc/tincrepo/resource_management/eagerfree/expected/: icg_eagerfree.ans
src/test/tinc/tincrepo/resource_management/eagerfree/sql/: icg_eagerfree.sql  icg_eagerfree_setup.sql
src/test/tinc/tincrepo/resource_management/memory_accounting/: test_genoverflow.py  test_oom.py
src/test/tinc/tincrepo/resource_management/memory_accounting/explain_analyze_test/: test_explain_enhancements.py
src/test/tinc/tincrepo/resource_management/memory_accounting/memory_account/: test_memory_account.py
src/test/tinc/tincrepo/resource_management/memory_quota/eager_free/: __init__.py  test_eagerfree.py
src/test/tinc/tincrepo/resource_management/memory_quota/resource_queues/: test_dynamic_memory_management.py  test_resqueues.py
src/test/tinc/tincrepo/resource_management/memory_quota/resultnode/: test_resultnode.py
src/test/tinc/tincrepo/resource_management/memory_quota/safe_zone/: test_dangerzone.py  test_dangerzone_memoryquota.py  test_safezone.py  test_safezone_memoryquota.py
src/test/tinc/tincrepo/resource_management/pg_cancel_backend/: __init__.py  test_pg_cancel_backend.py
src/test/tinc/tincrepo/resource_management/pg_cancel_backend/expected/: query03.ans
src/test/tinc/tincrepo/resource_management/pg_cancel_backend/sql/: query01.sql  query01_setup.sql  query02.sql  query02_setup.sql  query03.sql  query03_setup.sql  query04_MPP18288.sql  query04_MPP18288_setup.sql
src/test/tinc/tincrepo/resource_management/query_prioritization/: test_qpri.py
src/test/tinc/tincrepo/resource_management/resource_queue/: test_resource_queue.py
src/test/tinc/tincrepo/resource_management/resource_queue/runsql/: mpp-20483-verify.ans  mpp-20483-verify.sql  mpp-20483.ans  mpp-20483.sql  runsql.py
src/test/tinc/tincrepo/resource_management/resource_queue/runsql_19106/: init_file  mpp-19106-1.ans  mpp-19106-1.sql  mpp-19106.ans  mpp-19106.sql  runsql_19106.py
src/test/tinc/tincrepo/resource_management/resource_queue/setup/: mpp-20483-setup.ans  mpp-20483-setup.sql  setup.py
src/test/tinc/tincrepo/resource_management/resource_queue/setup_19106/: mpp-19106-setup.ans  mpp-19106-setup.sql  setup_19106.py
src/test/tinc/tincrepo/resource_management/runaway_query/: runaway_udf.py
src/test/tinc/tincrepo/resource_management/wrkloadadmin/: test_wrkloadadmin.py
src/test/unit/mock/: gpcodegen_mock.c
src/tools/pgindent/: typedefs.list
(+270 files in other folders)
